# Copyright (C) Nitrokey GmbH
# SPDX-License-Identifier: CC0-1.0

[package]
name = "trussed-rsa-alloc"
version = "0.1.0"
edition = "2021"
description = "Trussed backend adding support for the RSA algorithm using an allocator"
authors = ["Nitrokey GmbH <info@nitrokey.com>"]
license = "Apache-2.0 OR MIT"
rust-version = "1.66"
keywords = ["trussed", "rsa", "no-std"]

[dependencies]
delog = "0.1.6"
heapless-bytes = "0.3.0"
num-bigint-dig = { version = "0.8.2", default-features = false }
postcard = { version = "0.7", default-features = false, features = ["heapless"] }
rsa = { version = "0.8.1", default-features = false, features = ["sha2"]}
serde = { version = "1.0.152", default-features = false, features = ["derive"] }

trussed = "0.1"

[dev-dependencies]
hex-literal = "0.3.4"

delog = { version = "0.1.6", features = ["std-log"] }
test-log = "0.2.11"
env_logger = "0.10.0"
rand = "0.8.5"

[features]

virt = ["std", "trussed/virt"]
std = []

# Add support for raw RSA keys
raw = ["rsa/expose-internals"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[patch.crates-io]
trussed = { git = "https://github.com/Nitrokey/trussed", rev = "6b9a43fbaaf34fe8d69fac0021f8130dd9a436c9" }
littlefs2 = { git = "https://github.com/Nitrokey/littlefs2", tag = "v0.3.2-nitrokey-2" }


[profile.dev.package.rsa]
opt-level = 2

[profile.dev.package.num-bigint-dig]
opt-level = 2
