# Copyright (C) Nitrokey GmbH
# SPDX-License-Identifier: CC0-1.0

[workspace]
members = ["types"]

[workspace.package]
authors = ["Nitrokey GmbH <info@nitrokey.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
heapless-bytes = "0.3"
trussed-core = "0.1"

[package]
name = "trussed-rsa-alloc"
version = "0.3.0"
description = "Trussed backend adding support for the RSA algorithm using an allocator"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.66"
keywords = ["trussed", "rsa", "no-std"]

[dependencies]
heapless-bytes.workspace = true
delog = "0.1.6"
num-bigint-dig = { version = "0.8.2", default-features = false }
rsa = { version = "0.9", default-features = false, features = ["sha2"]}

trussed = { version = "0.1", default-features = false }
trussed-core = { workspace = true, features = ["crypto-client", "rsa2048", "rsa3072", "rsa4096"] }
trussed-rsa-types = "0.1"

[dev-dependencies]
hex-literal = "0.3.4"

delog = { version = "0.1.6", features = ["std-log"] }
test-log = "0.2.11"
env_logger = "0.10.0"
rand = "0.8.5"
trussed = { version = "0.1", default-features = false, features = ["certificate-client", "clients-1", "crypto-client"] }

[features]

virt = ["std", "trussed/virt"]
std = []

# Add support for raw RSA keys
raw = ["rsa/hazmat"]

log-all = []
log-none = []
log-trace = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[patch.crates-io]
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "6bba8fde36d05c0227769eb63345744e87d84b2b" }
trussed-rsa-types.path = "types"

[profile.dev.package.rsa]
opt-level = 2

[profile.dev.package.num-bigint-dig]
opt-level = 2
