# Copyright (C) Nitrokey GmbH
# SPDX-License-Identifier: CC0-1.0

[package]
name = "trussed-rsa-types"
version = "0.2.0"
description = "Helper types for the trussed-rsa-alloc backend"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["trussed", "rsa", "no-std"]

[dependencies]
heapless-bytes.workspace = true
postcard = { version = "0.7", default-features = false, features = ["heapless"] }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
trussed-core.workspace = true
